# innovation

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: bls_oes_series.template.csv  gvkey_cik_manual.template.csv  gvkey_ticker_hints.template.csv
datasets/dyevre_empirical/output/: country_year_dyevre_style_variables.csv  patent_dyevre_style_variables.parquet
datasets/patent_evidence/: measurement_memo.md
datasets/patent_evidence/output/: patent_backbone_build_stats.json  (+4 more)
datasets/social_returns_data/: README.md  dataset_catalog.csv  dataset_catalog.json
output/: firm_year_enriched.csv  gvkey_cik_link_conflicts.csv  patent_static_all.csv
output_10k/: firm_year_enriched.csv  gvkey_cik_link_candidates.csv  gvkey_cik_links.csv  patent_firm_year_panel.csv
outputs/descriptives/: descriptive_run_summary.json
outputs/descriptives_industry/: industry_descriptive_run_summary.json
outputs/dyevre_empirical/: dyevre_empirical_run_summary.json
scripts/: build_social_returns_panel.py  download_social_returns_data.py
scripts/descriptives/: README.md  generate_descriptive_package.py  generate_industry_descriptive_package.py
scripts/dyevre_empirical/: README.md  build_dyevre_empirical_package.py
scripts/patent_evidence/: 01_build_patent_backbone.py  02_score_patent_evidence.py  03_aggregate_patent_evidence_country_year.py  README.md
src/firm_patent_enrich/: cli.py  config.py  external_data.py  linking.py  patents.py  pipeline.py  sec.py  utils.py
tests/: test_external_data.py  test_linking.py  test_patents.py  test_utils.py
(+117 files in other folders)
