[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firm-patent-enrich"
version = "0.2.0"
description = "Public-data replication and firm-level enrichment pipeline for compustat-patents."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "rapidfuzz>=3.9.0"
]

[project.scripts]
firm-patent-enrich = "firm_patent_enrich.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
