[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firm-patent-enrich"
version = "0.2.0"
description = "Public-data replication and firm-level enrichment pipeline for compustat-patents."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.4.0",
  "duckdb>=1.0.0",
  "pycountry>=24.6.1",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "xlrd>=2.0.1",
  "jinja2>=3.1.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "rapidfuzz>=3.9.0"
]

[project.scripts]
firm-patent-enrich = "firm_patent_enrich.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
